# Agentropolis

./: .env.example  .gitignore  README.md  index.html  neondb_mcp_skills.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: add_event_effects_columns.py  add_follower_avatar_fields.py  add_locations_region_index.py  add_zoning_columns.py  cc6e82843068_initial_schema_v2.py
backend/src/: config.py  main.py
backend/src/agentropolis_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/agents/: archetype_agent.py  event_designer.py  fallback.py  follower_rules.py  follower_variation.py  schemas.py  tools.py
backend/src/api/: archetypes.py  events.py  followers.py  posts.py  router.py  sessions.py  tick.py  zones.py
backend/src/avatar/: __init__.py  generator.py  schema.py
backend/src/data/: demographics.py  disease_configs.py  event_presets.py  industry_mapping.py  toronto_neighborhoods.py  toronto_zones.py
backend/src/db/: engine.py  models.py  queries.py
backend/src/simulation/: event_effects.py  health_tick.py  seeder.py  tick_orchestrator.py
backend/src/ws/: handler.py  manager.py
backend/tests/: test_api_followers.py  test_api_sessions.py  test_config.py  test_fallback.py  test_schemas.py  test_seeder_helpers.py
docs/: PROCEDURAL_AVATAR_SYSTEM.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: index.ts  (+1 more)
(+109 files in other folders)
