[project]
name = "agentropolis-backend"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "railtracks",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.5",
    "python-dotenv>=1.0.0",
    "websockets>=13.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "alembic>=1.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
